# GaussianBeliefTrees

./: .gitignore  CMakeLists.txt  Config.cmake.in  Dockerfile  README.md
benchmarks/: benchmark.sh  benchmark_fixedK.cpp  benchmark_gbt.hpp  benchmark_rrbt.cpp  benchmark_rrbt.hpp  benchmark_tro_2dsimple.cpp  benchmark_tro_2dsimple.hpp  benchmark_tro_2dsimple_fixedK.cpp  benchmark_tro_2dsimple_fixedK.hpp  benchmark_tro_2dsimple_rrbt.cpp  benchmark_tro_2dsimple_rrbt.hpp  benchmark_tro_2dunicycle.cpp  benchmark_tro_2dunicycle.hpp  benchmark_tro_3dfixedwing.cpp  benchmark_varyK.cpp  benchmark_varyK_full.cpp
config/: 2d_simple_block.ini  2d_simple_empty.ini  2d_simple_narrow.ini  2d_simple_underwater.ini  2d_unicycle_block.ini  2d_unicycle_empty.ini  2d_unicycle_narrow.ini  2d_unicycle_underwater.ini  3d_fixedwing_building0.ini  3d_fixedwing_building1.ini  3d_fixedwing_empty.ini  3d_simple_building0.ini  3d_simple_building1.ini  3d_simple_empty.ini
configurations/scenes/: scene5.yaml
configurations/systems/: system1.yaml
data/: fixedK_03_tree_60sec.csv  fixedK_tree_60sec.csv  solution_1sec.csv  tree.csv  tree_1sec.csv
demos/: gbt.cpp  gbt.hpp
include/Benchmarking/: MyBenchmarkRRBT.hpp
include/OptimizationObjectives/: expected_cost_objective.hpp  state_cost_objective.hpp
include/Planners/: SSBT.hpp  mod_rrt.hpp  rrbt.hpp  rrbt_fixedwing.hpp  rrbt_unicycle.hpp
include/Spaces/: R2BeliefSpace.h  R2BeliefSpaceEuclidean.h  R3BeliefSpace.h  RealVectorBeliefSpace.h
include/StatePropagators/: 2DUnicyclePropagator.h  2DUnicyclePropagatorfixedK.h  3DSimpleStatePropagator.h  3DSimpleStatePropagatorFull.h  3DSimpleStatePropagatorfixedK.h  3DUnicyclePropagator.h  3DUnicyclePropagatorfixedK.h  SimpleStatePropagator.h  SimpleStatePropagatorEuclidean.h  SimpleStatePropagatorFull.h  SimpleStatePropagatorfixedK.h
include/StateSamplers/: BeliefStateSampler.h  CompoundBeliefStateSampler.h
include/System/: System.h
include/ValidityCheckers/: state_validity_checker_pcc_blackmore.hpp  state_validity_checker_pcc_blackmore_euclidean.hpp
include/helper/: helper.hpp
include/ltl/: LTLProductGraph.h  LTLWorld.h  STLAutomaton.hpp  STLBeliefDecomposition3D.h  STLMyDecomposition.h  STLProblemDefinition.hpp  STLSpaceInformation.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros_ws/: fixedK_03_tree_60sec.csv  running.md  solution_60sec_fixedK_03.csv
ros_ws/agent_gaussian_belief_trees/: CMakeLists.txt  package.xml
ros_ws/agent_gaussian_belief_trees/include/Benchmarking/: MyBenchmark.hpp
ros_ws/agent_gaussian_belief_trees/include/OptimizationObjectives/: state_cost_objective.hpp
ros_ws/agent_gaussian_belief_trees/include/Spaces/: R2BeliefSpace.h
ros_ws/agent_gaussian_belief_trees/include/StateSamplers/: guided_state_sampler_3d.hpp
ros_ws/agent_gaussian_belief_trees/include/ValidityCheckers/: StateValidityCheckerBlackmore.h  StateValidityCheckerBlackmore.hpp  state_validity_checker_pcc_blackmore.hpp
ros_ws/agent_gaussian_belief_trees/include/agent_gaussian_belief_trees/: GaussianBeliefTrees.h
ros_ws/agent_gaussian_belief_trees/include/ltl/: PropositionalGridDecomposition.hpp  STLPropositionalDecomposition.h
ros_ws/agent_gaussian_belief_trees/src/: GaussianBeliefTrees.cpp
ros_ws/agent_gaussian_belief_trees/src/OptimizationObjectives/: expected_cost_objective.cpp  state_cost_objective.cpp
ros_ws/agent_gaussian_belief_trees/src/Planners/: SSBT.cpp  mod_rrt.cpp
ros_ws/agent_gaussian_belief_trees/src/Planners/simba/Planners/: GBT_SST.cpp  SSBT.hpp  STLRRT.h  STLRRTUnicycle.h  STLRRTUnicycle_final.cpp  STLRRTUnicycle_final.h  STLRRTUnicycle_final3D.cpp  mod_rrt.cpp  mod_rrt.hpp  myEST.hpp
ros_ws/agent_gaussian_belief_trees/src/Scene/: Scene.cpp  Scene.h
ros_ws/agent_gaussian_belief_trees/src/Spaces/: R3BeliefSpace.cpp  RealVectorBeliefSpace.cpp
ros_ws/agent_gaussian_belief_trees/src/Spaces/tmpl/: RNBeliefSpace.cpp
ros_ws/agent_gaussian_belief_trees/src/System/: System.cpp
ros_ws/agent_gaussian_belief_trees/src/ValidityCheckers/: state_validity_checker_pcc_blackmore.cpp
ros_ws/agent_gaussian_belief_trees/src/ValidityCheckers/tmpl/: EuclideanScenario1ValidityChecker.cpp  EuclideanScenario1ValidityChecker.hpp  MyValidityChecker.hpp  Scenario3ValidityChecker.cpp
ros_ws/agent_gaussian_belief_trees/src/stl/: PrositionalGridDecomposition.cpp  STLBeliefDecomposition.h
ros_ws/agent_helpers/: CMakeLists.txt  package.xml
ros_ws/agent_helpers/src/: Scene.cpp  System.cpp
ros_ws/agent_visualizer/: CMakeLists.txt  package.xml
ros_ws/agent_visualizer/include/agent_visualizer/: Visualizer.h
ros_ws/agent_visualizer/src/: Visualizer.cpp
ros_ws/src/agent_bringup/: CMakeLists.txt  package.xml
ros_ws/src/agent_bringup/launch/: agent_gbt.launch.py
ros_ws/src/agent_gbt/: CMakeLists.txt  package.xml
ros_ws/src/agent_gbt/include/agent_gbt/: GBT.h
ros_ws/src/agent_gbt/src/: GBT.cpp
scenes/: 2d_block.yaml  2d_empty.yaml  2d_narrow.cpp  2d_narrow.hpp  2d_narrow.yaml  2d_underwater.yaml  scene3.cpp  scene3.hpp  scene4.cpp  scene4.hpp  scene5.yaml  scenereplanning.cpp  scenereplanning.hpp  scenereplanning2.cpp  scenereplanning2.hpp
src/: euclidean_main.cpp  euclidean_main.hpp  scenario1_create.cpp  simple_main.cpp  simple_main.hpp
src/Benchmarking/: MyBenchmark.cpp  MyBenchmarkRRBT.cpp
src/OptimizationObjectives/: state_cost_objective.cpp
src/Planners/: SSBT.cpp  mod_rrt copy.cpp  mod_rrt.cpp  rrbt.cpp  rrbt_fixedwing.cpp  rrbt_unicycle.cpp
src/Scene/: Scene.cpp  Scene.h
src/Spaces/: R2BeliefSpace.cpp  R2BeliefSpaceEuclidean.cpp  R3BeliefSpace.cpp
src/StatePropagators/: 2DUnicyclePropagator.cpp  2DUnicyclePropagatorFull.cpp  2DUnicyclePropagatorfixedK.cpp  3DSimpleStatePropagator.cpp  3DSimpleStatePropagator.h  3DSimpleStatePropagatorFull.cpp  3DSimpleStatePropagatorfixedK.cpp  3DUnicyclePropagator.cpp  3DUnicyclePropagator.h  3DUnicyclePropagatorfixedK.cpp  SimpleStatePropagator.cpp  SimpleStatePropagatorFull.cpp  SimpleStatePropagatorfixedK.cpp
src/StateSamplers/: BeliefStateSampler.cpp  (+4 more)
(+191 files in other folders)
