<?xml version="1.0"?>
<package format="3">
  <name>agent_gaussian_belief_trees</name>
  <version>0.0.1</version>
  <description>A package for visualizing agents and obstacles in RViz2</description>

  <maintainer email="nipe1783@colorado.edu">Nicolas Perrault</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>agent_helpers</depend>
  <depend>ompl</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
