<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agent_helpers</name>
  <version>0.1.0</version>
  <description>Package for agent. Provides abstract classes for gbt planner to use.</description>
  <maintainer email="nipe1783@colorado.edu">Nicolas Perrault</maintainer>
  <author email="nipe1783@colorado.edu">Nicolas Perrault</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>ros_environment</build_depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <depend>geometry_msgs</depend>

  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
